--- a/lib/lessons.yml
+++ b/lib/lessons.yml
@@ -85,13 +85,15 @@
     - question: "There's a promotion for your customers who live in Ontario, Canada. Return the first name, last name, and phone number of the customers you'll add to the telemarketing list."
       answer: "SELECT first_name, last_name, phone FROM customers WHERE state = 'ON';"
     - question: "There was a shipping mixup and every customer in the state of Arizona needs to be notified right away. Return the first name, last name and phone number of all customers in Arizona so they can be notified ASAP!"
-      answer: "SELECT first_name, last_name, phone_number FROM customers WHERE state = 'AZ';"
+      answer: "Select first_name, last_name, phone_number FROM customers WHERE state = 'AZ';"
 5:
   title: Filter Data With Greater/Less Than Condition
   text: Coming Soon
   examples:
     - Coming Soon
   tasks:
+    - question: Coming Soon
+      answer:
 6:
   title: Filter Data With Partial Text Match
   text: Coming Soon
