fix to lesson 5

--- a/lib/lessons.yml
+++ b/lib/lessons.yml
@@ -104,6 +104,8 @@
   examples:
     - Coming Soon
   tasks:
+    - question: Coming Soon
+      answer: 
 6:
   title: Filter Data With Partial Text Match
   text: Coming Soon
