--- a/lib/lessons.yml
+++ b/lib/lessons.yml
@@ -79,6 +79,16 @@
     - question: "Return first name, last name, title, and email address from the employees table."
       answer: "SELECT fist_name, last_name, title, email_address from employees;"
 4:
+  title:
+  text: >
+    TEXT TEXT TEXT
+  examples:
+    - Coming Soon
+    - Coming Soon
+  tasks:
+    - question: Coming Soon
+      answer:
+5:
   title: Filter Data Matching Exact Condition
   text: >
     So far, we have only been able to filter by column. What if we want to return only rows that match a
@@ -98,15 +108,15 @@
       answer: "SELECT first_name, last_name, phone FROM customers WHERE state = 'ON';"
     - question: "There was a shipping mixup and every customer in the state of Arizona needs to be notified right away. Return the first name, last name and phone number of all customers in Arizona so they can be notified ASAP!"
       answer: "SELECT first_name, last_name, phone_number FROM customers WHERE state = 'AZ';"
-5:
+6:
   title: Filter Data With Greater/Less Than Condition
   text: Coming Soon
   examples:
     - Coming Soon
   tasks:
     - question: Coming Soon
-      answer: 
-6:
+      answer:
+7:
   title: Filter Data With Partial Text Match
   text: Coming Soon
   examples:
@@ -117,6 +127,7 @@
 
 
 
+# calculations - COUNT SUM LENGTH AVG FIRST LAST MIN MAX
 # aliasing columns
 # ordering asc, desc
 # combining strings using || ' ' ||
